@@ -1,9 +1,10 @@
 2.2.0
 =====
-Mar 10, 2017
+Mar 11, 2017
 - Added support for scenario outlines
   - You can use them inline or as StepDefs
   - Each example record is a hyperlink in the HTML report that expands the scenario when clicked
+- Escape description lines in HTML report
 
 2.1.0
 =====
